--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="Le blog sur les carreaux de carrelage la petite sirene">
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
 
@@ -44,7 +44,7 @@ https://templatemo.com/tm-551-stand-blog
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><h2>Stand Blog<em>.</em></h2></a>
+          <a class="navbar-brand" href="index.html"><h2>Carrelasirnene<em>.</em></h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -308,72 +308,70 @@ https://templatemo.com/tm-551-stand-blog
                     <form id="search_form" name="gs" method="GET" action="#">
                       <input type="text" name="q" class="searchText" placeholder="type to search..." autocomplete="on">
                     </form>
-                  </div>
-                </div>
-                <div class="col-lg-12">
-                  <div class="sidebar-item recent-posts">
-                    <div class="sidebar-heading">
-                      <h2>Recent Posts</h2>
+                    <div class="col-lg-12">
+                      <div class="sidebar-item recent-posts">
+                        <div class="sidebar-heading">
+                          <h2>News petite sirene</h2>
+                        </div>
+                        <div class="content">
+                          <ul>
+                            <li><a href="post-details.html">
+                              <h5>La petite sirene bientot la série sur netflix</h5>
+                              <span>May 31, 2020</span>
+                            </a></li>
+                            <li><a href="post-details.html">
+                              <h5>Collab Supreme x La petite sirene</h5>
+                              <span>May 28, 2020</span>
+                            </a></li>
+                            <li><a href="post-details.html">
+                              <h5>Actions sur les carreaux de carrelage petite sirene se vendent vite</h5>
+                              <span>May 14, 2020</span>
+                            </a></li>
+                          </ul>
+                        </div>
+                      </div>
                     </div>
-                    <div class="content">
-                      <ul>
-                        <li><a href="post-details.html">
-                          <h5>Vestibulum id turpis porttitor sapien facilisis scelerisque</h5>
-                          <span>May 31, 2020</span>
-                        </a></li>
-                        <li><a href="post-details.html">
-                          <h5>Suspendisse et metus nec libero ultrices varius eget in risus</h5>
-                          <span>May 28, 2020</span>
-                        </a></li>
-                        <li><a href="post-details.html">
-                          <h5>Swag hella echo park leggings, shaman cornhole ethical coloring</h5>
-                          <span>May 14, 2020</span>
-                        </a></li>
-                      </ul>
+                    <div class="col-lg-12">
+                      <div class="sidebar-item categories">
+                        <div class="sidebar-heading">
+                          <h2>Carreaux de carrelage</h2>
+                        </div>
+                        <div class="content">
+                          <ul>
+                            <li><a href="https://www.leroymerlin.fr/">- Leroy Merlin</a></li>
+                            <li><a href="https://www.castorama.fr">- Castorama</a></li>
+                            <li><a href="https://www.bricodepot.fr/">- Brico dépo</a></li>
+                            <li><a href="https://www.conforama.fr/">- Conforama</a></li>
+                            <li><a href="https://www.manomano.fr/">- ManoMano</a></li>
+                            <li><a href="https://www.mr-bricolage.fr/">- Mr Bricolage</li>
+                          </ul>
+                        </div>
+                      </div>
                     </div>
-                  </div>
-                </div>
-                <div class="col-lg-12">
-                  <div class="sidebar-item categories">
-                    <div class="sidebar-heading">
-                      <h2>Categories</h2>
-                    </div>
-                    <div class="content">
-                      <ul>
-                        <li><a href="#">- Nature Lifestyle</a></li>
-                        <li><a href="#">- Awesome Layouts</a></li>
-                        <li><a href="#">- Creative Ideas</a></li>
-                        <li><a href="#">- Responsive Templates</a></li>
-                        <li><a href="#">- HTML5 / CSS3 Templates</a></li>
-                        <li><a href="#">- Creative &amp; Unique</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-12">
-                  <div class="sidebar-item tags">
-                    <div class="sidebar-heading">
-                      <h2>Tag Clouds</h2>
-                    </div>
-                    <div class="content">
-                      <ul>
-                        <li><a href="#">Lifestyle</a></li>
-                        <li><a href="#">Creative</a></li>
-                        <li><a href="#">HTML5</a></li>
-                        <li><a href="#">Inspiration</a></li>
-                        <li><a href="#">Motivation</a></li>
-                        <li><a href="#">PSD</a></li>
-                        <li><a href="#">Responsive</a></li>
-                      </ul>
+                    <div class="col-lg-12">
+                      <div class="sidebar-item tags">
+                        <div class="sidebar-heading">
+                          <h2>Tag petite sirene</h2>
+                        </div>
+                        <div class="content">
+                          <ul>
+                            <li><a href="#">Coline</a></li>
+                            <li><a href="#">Carreaux</a></li>
+                            <li><a href="#">Homard</a></li>
+                            <li><a href="#">Sirene</a></li>
+                            <li><a href="#">poisson</a></li>
+                            <li><a href="#">Prince</a></li>
+                            <li><a href="#">Carrelage</a></li>
+                          </ul>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </section>
+        </section>
 
     
     <footer>
