--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html lang="fr">
 
   <head>
-
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Découvrez les nouveaux carreaux de carrelage la petite sirene. Retrouve tous les personnes de la petite sirene chez nous. Des carreaux de carrelage à la mosaique.">
+    <meta name="description" content="Découvrez les nouveaux carreaux de carrelage petite sirene. Retrouve tous la petite sirene chez nous. Des carreaux de carrelage à la mosaique.">
     <meta name="google-site-verification" content="sKlr3ARnRo4BYO9Mi7sIBzaSYOMx8fzlewH6UYf5KdE" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6M6M6TGFNC"></script>
@@ -19,40 +17,14 @@
 </script>
     <meta name="author" content="Carrelasirnene">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
-
-    <title>Carrelasirnene | La référence en carreaux de carrelage la petite sirene</title>
-
-
-    <!-- Bootstrap core CSS -->
+    <title>Carrelasirnene | La référence en carreaux de carrelage petite sirene</title>
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-
-    <!-- Additional CSS Files -->
     <link rel="stylesheet" href="assets/css/fontawesome.css">
     <link rel="stylesheet" href="assets/css/templatemo-stand-blog.css">
     <link rel="stylesheet" href="assets/css/owl.css">
-<!--
-
-TemplateMo 551 Stand Blog
-
-https://templatemo.com/tm-551-stand-blog
-
--->
   </head>
 
   <body>
-
-    <!-- ***** Preloader Start ***** -->
-    <div id="preloader">
-        <div class="jumper">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-    </div>  
-    <!-- ***** Preloader End ***** -->
-
-    <!-- Header -->
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
@@ -84,14 +56,11 @@ https://templatemo.com/tm-551-stand-blog
         </div>
       </nav>
     </header>
-
-    <!-- Page Content -->
-    <!-- Banner Starts Here -->
     <div class="main-banner header-text">
       <div class="container-fluid">
         <div class="owl-banner owl-carousel">
           <div class="item">
-            <img src="assets/images/banner_carreau_carrelage_sirene.jpg" alt="carreaux_de_carrelage_petite_sirene">
+            <img src="assets/images/banner_carreau_carrelage_sirene.jpg" alt="carreaux_de_carrelage_petite_sirene" loading="lazy">
             <div class="item-content">
               <div class="main-content">
                 <div class="meta-category">
@@ -107,7 +76,7 @@ https://templatemo.com/tm-551-stand-blog
             </div>
           </div>
           <div class="item">
-            <img src="assets/images/banner_carreau_carrelage_petite_sirene_et_ses_amis.jpg" alt="carreaux_de_carrelage_petite_sirene_et_amis">
+            <img src="assets/images/banner_carreau_carrelage_petite_sirene_et_ses_amis.jpg" alt="carreaux_de_carrelage_petite_sirene_et_amis" loading="lazy">
             <div class="item-content">
               <div class="main-content">
                 <div class="meta-category">
@@ -123,7 +92,7 @@ https://templatemo.com/tm-551-stand-blog
             </div>
           </div>
           <div class="item">
-            <img src="assets/images/banner_outils_pour_installer_carreaux.jpg" alt="outils_pour_installer_carreaux">
+            <img src="assets/images/banner_outils_pour_installer_carreaux.jpg" alt="outils_pour_installer_carreaux" loading="lazy">
             <div class="item-content">
               <div class="main-content">
                 <div class="meta-category">
@@ -139,7 +108,7 @@ https://templatemo.com/tm-551-stand-blog
             </div>
           </div>
           <div class="item">
-            <img src="assets/images/banner_boire_une_bier_apres_carrelage.jpg" alt="boire_une_biere_apres_carrelage">
+            <img src="assets/images/banner_boire_une_bier_apres_carrelage.jpg" alt="boire_une_biere_apres_carrelage" loading="lazy">
             <div class="item-content">
               <div class="main-content">
                 <div class="meta-category">
@@ -155,7 +124,7 @@ https://templatemo.com/tm-551-stand-blog
             </div>
           </div>
           <div class="item">
-            <img src="assets/images/banner_peindre_carreaux_carrelage.jpg" alt="peindre_carreaux_carrelage">
+            <img src="assets/images/banner_peindre_carreaux_carrelage.jpg" alt="peindre_carreaux_carrelage" loading="lazy">
             <div class="item-content">
               <div class="main-content">
                 <div class="meta-category">
@@ -171,7 +140,7 @@ https://templatemo.com/tm-551-stand-blog
             </div>
           </div>
           <div class="item">
-            <img src="assets/images/banner_réutiliser_ses_pneux.jpg" alt="réutiliser_ses_pneux">
+            <img src="assets/images/banner_réutiliser_ses_pneux.jpg" alt="réutiliser_ses_pneux" loading="lazy">
             <div class="item-content">
               <div class="main-content">
                 <div class="meta-category">
@@ -189,8 +158,6 @@ https://templatemo.com/tm-551-stand-blog
         </div>
       </div>
     </div>
-    <!-- Banner Ends Here -->
-
     <section class="call-to-action">
       <div class="container">
         <div class="row">
@@ -223,7 +190,7 @@ https://templatemo.com/tm-551-stand-blog
                 <div class="col-lg-12">
                   <div class="blog-post">
                     <div class="blog-thumb">
-                      <img src="assets/images/blog-post_carreau_carrelage_sirene.jpg" alt="carreaux_de_carrelage_petite_sirene">
+                      <img src="assets/images/blog-post_carreau_carrelage_sirene.jpg" alt="carreaux_de_carrelage_petite_sirene" loading="lazy">
                     </div>
                     <div class="down-content">
                       <span>INTERRIEUR</span>
@@ -258,7 +225,7 @@ https://templatemo.com/tm-551-stand-blog
                 <div class="col-lg-12">
                   <div class="blog-post">
                     <div class="blog-thumb">
-                      <img src="assets/images/blog-post_carreau_carrelage_petite_sirene_et_ses_amis.jpg" alt="carreaux_de_carrelage_petite_sirene">
+                      <img src="assets/images/blog-post_carreau_carrelage_petite_sirene_et_ses_amis.jpg" alt="carreaux_de_carrelage_petite_sirene" loading="lazy">
                     </div>
                     <div class="down-content">
                       <span>PISCINE</span>
@@ -293,7 +260,7 @@ https://templatemo.com/tm-551-stand-blog
                 <div class="col-lg-12">
                   <div class="blog-post">
                     <div class="blog-thumb">
-                      <img src="assets/images/blog-post_outils_pour_installer_carreaux.jpg" alt="outils_pour_installer_carreaux">
+                      <img src="assets/images/blog-post_outils_pour_installer_carreaux.jpg" alt="outils_pour_installer_carreaux" loading="lazy">
                     </div>
                     <div class="down-content">
                       <span>OUTILS</span>
@@ -421,11 +388,8 @@ https://templatemo.com/tm-551-stand-blog
       </div>
     </footer>
 
-    <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Additional Scripts -->
     <script src="assets/js/custom.js"></script>
     <script src="assets/js/owl.js"></script>
     <script src="assets/js/slick.js"></script>
@@ -433,15 +397,14 @@ https://templatemo.com/tm-551-stand-blog
     <script src="assets/js/accordions.js"></script>
 
     <script language = "text/Javascript"> 
-      cleared[0] = cleared[1] = cleared[2] = 0; //set a cleared flag for each field
-      function clearField(t){                   //declaring the array outside of the
-      if(! cleared[t.id]){                      // function makes it static and global
-          cleared[t.id] = 1;  // you could use true and false, but that's more typing
-          t.value='';         // with more chance of typos
+      cleared[0] = cleared[1] = cleared[2] = 0;
+      function clearField(t){
+      if(! cleared[t.id]){
+          cleared[t.id] = 1;
+          t.value='';
           t.style.color='#fff';
           }
       }
     </script>
-
   </body>
 </html>
