--- a/post-details.html
+++ b/post-details.html
@@ -1,33 +1,19 @@
 <!DOCTYPE html>
 <html lang="fr">
-
   <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Nouveauté, Carreaux de carrelage la petite sirene">
+    <meta name="description" content="carreaux de carrelage petite sirene">
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
-
     <title>Carrelasirnene - Carreaux de carrelage petite sirene</title>
-
-    <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-
-    <!-- Additional CSS Files -->
     <link rel="stylesheet" href="assets/css/fontawesome.css">
     <link rel="stylesheet" href="assets/css/templatemo-stand-blog.css">
     <link rel="stylesheet" href="assets/css/owl.css">
-<!--
-
-
--->
   </head>
 
   <body>
-
-    <!-- ***** Preloader Start ***** -->
     <div id="preloader">
         <div class="jumper">
             <div></div>
@@ -35,9 +21,6 @@
             <div></div>
         </div>
     </div>  
-    <!-- ***** Preloader End ***** -->
-
-    <!-- Header -->
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
@@ -69,9 +52,6 @@
         </div>
       </nav>
     </header>
-
-    <!-- Page Content -->
-    <!-- Banner Starts Here -->
     <div class="heading-page header-text">
       <section class="page-heading">
         <div class="container">
@@ -86,9 +66,6 @@
         </div>
       </section>
     </div>
-    
-    <!-- Banner Ends Here -->
-
     <section class="call-to-action">
       <div class="container">
         <div class="row">
@@ -109,8 +86,6 @@
         </div>
       </div>
     </section>
-
-
     <section class="blog-posts grid-system">
       <div class="container">
         <div class="row">
@@ -364,40 +339,28 @@
           </div>
           <div class="col-lg-12">
             <div class="copyright-text">
-              <p>Copyright 2020 Fun&Co.
-                    
+              <p>Copyright 2020 Fun&Co.           
             </div>
           </div>
         </div>
       </div>
     </footer>
-
-
-    <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-
-    <!-- Additional Scripts -->
     <script src="assets/js/custom.js"></script>
     <script src="assets/js/owl.js"></script>
     <script src="assets/js/slick.js"></script>
     <script src="assets/js/isotope.js"></script>
     <script src="assets/js/accordions.js"></script>
-
-
     <script language = "text/Javascript"> 
-      cleared[0] = cleared[1] = cleared[2] = 0; //set a cleared flag for each field
-      function clearField(t){                   //declaring the array outside of the
-      if(! cleared[t.id]){                      // function makes it static and global
-          cleared[t.id] = 1;  // you could use true and false, but that's more typing
-          t.value='';         // with more chance of typos
+      cleared[0] = cleared[1] = cleared[2] = 0;
+      function clearField(t){
+      if(! cleared[t.id]){
+          cleared[t.id] = 1;
+          t.value='';
           t.style.color='#fff';
           }
       }
     </script>
-
-
   </body>
-
 </html>
